Bumped line-height a hair to prevent descenders from getting clipped. Trello 677: https://trello.com/c/Lb9ojhof

--- a/src/main/resources/scss/common/components/_user-session.scss
+++ b/src/main/resources/scss/common/components/_user-session.scss
@@ -5,7 +5,7 @@
 	position: relative;
 	overflow: hidden;
 	background: $panel-background;
-	line-height: 1.1;
+	line-height: 1.2em;
 
 	.avatar {
 		width: 23%;
